force-app/main/default/objects/WarrantyCoverage__c/WarrantyCoverage__c.object-meta.xml
<CustomObject>
    <description>Object used to store vehicle-specific or model-level warranty coverage terms, including dates, mileage cap, and covered categories, to support eligibility decisions.</description>
    <label>Warranty Coverage</label>
    <nameField>
        <displayFormat>WCVG-{000000}</displayFormat>
        <label>Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>