force-app/main/default/objects/WarrantyCoverage__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Coverage end date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>