force-app/main/default/objects/WarrantyCoverage__c/fields/LaborPolicy__c.field-meta.xml
<CustomField>
    <fullName>LaborPolicy__c</fullName>
    <description>Short notes on labor policies applicable to this coverage.</description>
    <label>Labor Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>