force-app/main/default/objects/WarrantyCoverage__c/fields/MileageCap__c.field-meta.xml
<CustomField>
    <fullName>MileageCap__c</fullName>
    <description>Maximum odometer miles covered under warranty.</description>
    <label>Mileage Cap</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>