force-app/main/default/objects/WarrantyCoverage__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Vehicle model for model-level coverage (if Vehicle not specified).</description>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>