force-app/main/default/objects/WarrantyCoverage__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Coverage start date.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>