force-app/main/default/objects/WarrantyCoverage__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vehicle/Asset this coverage applies to. Optional if using model-level coverage.</description>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Warranty Coverages</relationshipLabel>
    <relationshipName>WarrantyCoverages</relationshipName>
    <type>Lookup</type>
</CustomField>