force-app/main/default/objects/WarrantyCoverage__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Vehicle model year for model-level coverage (if Vehicle not specified).</description>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>